# Mudra

./: README.md  main.py  pyproject.toml
dataset/: test.json
dataset_generator_helper/: README.md  configs.py  main.py  opencv_frame.py  position_manager.py  scrollable_label.py  serializer.py
